--- a/editor/index.html
+++ b/editor/index.html
@@ -1,7 +1,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1"/>
-
+    <meta name="description" content="Prototype Node Based Shader Editor in WebGL to edit and create materials interactively with nodes, where you can drag and drop textures and use multiple features similar to other editors" />
     <title>Node Based Shader Editor in WebGL</title>
 
     <link rel="stylesheet" type="text/css" href="css/external/font-awesome-4.3.0/css/font-awesome.min.css"/>
@@ -38,6 +38,15 @@
     (function () {
         vik.app.init();
     })();
+</script>
+<script type="text/javascript">
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-85785506-1', 'auto');
+  ga('send', 'pageview');
 </script>
 </body>
 </html>
