--- a/editor/index.html
+++ b/editor/index.html
@@ -39,7 +39,7 @@
         vik.app.init();
     })();
 </script>
-<script type="text/javascript">
+<script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -47,6 +47,7 @@
 
   ga('create', 'UA-85785506-1', 'auto');
   ga('send', 'pageview');
+
 </script>
 </body>
 </html>
