--- a/editor/index.html
+++ b/editor/index.html
@@ -37,7 +37,7 @@
 
     ga('create', 'UA-85785506-1', 'auto');
     ga('send', 'pageview');
-
+    setTimeout("ga('send','event','adjusted bounce rate','page visit 30 seconds or more')",30000);
     </script>
 
 </head>
