--- a/editor/index.html
+++ b/editor/index.html
@@ -2,6 +2,10 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1"/>
     <meta name="description" content="Prototype Node Based Shader Editor in WebGL to edit and create materials interactively with nodes, where you can drag and drop textures and use multiple features similar to other editors" />
+    <meta property="og:title" content="Node Based Shader Editor in WebGL"/>
+    <meta property="og:image" content="img/demo.jpg"/>
+    <meta property="og:description" content="Prototype Node Based Shader Editor in WebGL to edit and create materials interactively with nodes, where you can drag and drop textures and use multiple features similar to other editors"/>
+    <meta property="og:url" content="https://victhorlopez.github.io/editor/" />
     <title>Node Based Shader Editor in WebGL</title>
 
     <link rel="stylesheet" type="text/css" href="css/external/font-awesome-4.3.0/css/font-awesome.min.css"/>
