--- a/editor/index.html
+++ b/editor/index.html
@@ -3,7 +3,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1"/>
     <meta name="description" content="Prototype Node Based Shader Editor in WebGL to edit and create materials interactively with nodes, where you can drag and drop textures and use multiple features similar to other editors" />
     <meta property="og:title" content="Node Based Shader Editor in WebGL"/>
-    <meta property="og:image" content="img/demo.jpg"/>
+    <meta property="og:image" content="https://victhorlopez.github.io/editor/img/demo.jpg"/>
     <meta property="og:description" content="Prototype Node Based Shader Editor in WebGL to edit and create materials interactively with nodes, where you can drag and drop textures and use multiple features similar to other editors"/>
     <meta property="og:url" content="https://victhorlopez.github.io/editor/" />
     <title>Node Based Shader Editor in WebGL</title>
