--- a/editor/index.html
+++ b/editor/index.html
@@ -1,9 +1,10 @@
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en" prefix="og: http://ogp.me/ns#" >
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1"/>
     <meta name="description" content="Prototype Node Based Shader Editor in WebGL to edit and create materials interactively with nodes, where you can drag and drop textures and use multiple features similar to other editors" />
     <meta property="og:title" content="Node Based Shader Editor in WebGL"/>
     <meta property="og:image" content="https://victhorlopez.github.io/editor/img/demo.jpg"/>
+    <meta property="og:type" content="website"/>
     <meta property="og:description" content="Prototype Node Based Shader Editor in WebGL to edit and create materials interactively with nodes, where you can drag and drop textures and use multiple features similar to other editors"/>
     <meta property="og:url" content="https://victhorlopez.github.io/editor/" />
     <title>Node Based Shader Editor in WebGL</title>
