--- a/editor/index.html
+++ b/editor/index.html
@@ -1,6 +1,7 @@
+<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en" prefix="og: http://ogp.me/ns#" >
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta name="description" content="Prototype Node Based Shader Editor in WebGL to edit and create materials interactively with nodes, where you can drag and drop textures and use multiple features similar to other editors" />
     <meta property="og:title" content="Node Based Shader Editor in WebGL"/>
     <meta property="og:image" content="https://victhorlopez.github.io/editor/img/demo.jpg"/>
@@ -48,7 +49,7 @@
 </head>
 <body>
 <div id="layout" style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px;"></div>
-<div class="w2ui-panel-tabs w2ui-reset w2ui-tabs" style="top: 0px; display: block;" name="layout2_preview_tabs">
+<div class="w2ui-panel-tabs w2ui-reset w2ui-tabs" style="top: 0px; display: block;">
     <div class="w2ui-tab active closable" title="" style="">myTab</div>
 </div>
 <script type="text/javascript">
